--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -6,7 +6,10 @@
     height: 100%;
     width: 100%;
     z-index: 10;
-    background-color: white;
+    /* background-color: rgb(212, 10, 10); */
+    background: url(https://img.freepik.com/premium-photo/happy-woman-with-camera-passport-waiting-travel-by-plane_28717-302.jpg?w=900);
+        background-size: 100vw 100vh;
+        background-position: center;
 }
 
 .login-form-content{
@@ -21,6 +24,15 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    border: 2px solid red;
+    padding: 10px 20px;
+        background-color: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(10px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
 }
 
 .login-form > div{
