--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -36,3 +36,9 @@
      align-items: center;
      width: 100%;
 }
+
+.portfolio{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+}
